--- a/static/styles.css
+++ b/static/styles.css
@@ -4,6 +4,7 @@
     --blue-sapphire: #314299;
     --purple-moon-raker: #D2C6F0;
     --yellow-orange: #FAB338;
+    --gray-geyser : ##dfe7e6;
 }
 
 body {
@@ -78,4 +79,12 @@ a.social > img {
     width: 25px;
     height: 25px;
     margin: 20px 20px 20px 0;
+}
+
+img.skill {
+    background-color: var(--gray-geyser);
+    height: 90px;
+    width: 90px;
+    padding: 20px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
