--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <div class="container">
-
+        <!-- ----------------------------------------------------------------------- -->
+        <!--                              About Me Section                           -->
+        <!-- ----------------------------------------------------------------------- -->
         <div class="row section-style" id="about" style="height: 100vh;">
             <div class="row" style="height: 10%;">
                 {% include 'header.html' %}
@@ -21,9 +23,9 @@
             </div>
 
             <div class="d-flex align-self-center" style="height: 10%;">
-                <a class="social" href=""><img src="/static/assets/github-icon.svg" alt=""></a>
-                <a class="social" href=""><img src="/static/assets/linkedin-square-icon.svg" alt=""></a>
-                <a class="social" href=""><img src="/static/assets/black-instagram-icon.svg" alt=""></a>
+                <a class="social" target="_blank" href="https://github.com/fdippiton"><img src="/static/assets/github-icon.svg" alt=""></a>
+                <a class="social" target="_blank" href="https://www.linkedin.com/in/francina-dippiton/"><img src="/static/assets/linkedin-square-icon.svg" alt=""></a>
+                <a class="social" target="_blank" href="https://www.instagram.com/fdippiton/"><img src="/static/assets/black-instagram-icon.svg" alt=""></a>
             </div>
 
         </div>
