--- a/templates/header.html
+++ b/templates/header.html
@@ -4,9 +4,11 @@
     </a>
 
     <ul class="nav nav-pills">
+      <li class="nav-item" style="color: red;"><a href="/" class="nav-link">HOME</a></li>
       <li class="nav-item"><a href="/about" class="nav-link">ABOUT</a></li>
-      <li class="nav-item"><a href="#work" class="nav-link">WORK</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">SKILLS</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">RESUME</a></li>
+      <li class="nav-item"><a href="/work" class="nav-link">WORK</a></li>
+      <li class="nav-item"><a href="/skills" class="nav-link">SKILLS</a></li>
+      <li class="nav-item"><a href="/resume" class="nav-link">RESUME</a></li>
+      <li class="nav-item"><a href="/contact" class="nav-link">CONTACT</a></li>
     </ul>
-  </header>
+</header>
