--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,12 @@
                   <h2 class="mt-5">Hi!</h2> <br>
                   <h2>I'm <span>Francina Dippitón!<span></h2> <br>
                   <h2> A Software Developer.</h2>
+                  <p class="hero-description">Computer System Engineering student.</p>
               </div>
   
               <!-- ----------------------------- Hero Photo ------------------------------ -->
               <div class="row d-flex justify-content-end">
-                <div class="profile-img-container">
+                <div class="profile-img-container text-center">
                   <img class="profile-row" id="img-profile"  src="../static/francina_profile.jpg" alt="">
                 </div>
               </div>
