--- a/templates/work.html
+++ b/templates/work.html
@@ -16,7 +16,7 @@
             <div class="row row-cols-1 row-cols-md-3 g-4 ">
                 <div class="col-6">
                 <div class="card">
-                    <div class="card-body" style="background-color: #FAB338; height: 250px;"></div>
+                    <div class="card-body" style="background-color: #D2C6F0; height: 250px;"></div>
                     <div class="card-body">
                     <h6 class="card-title"> <b>Project name</b></h6>
                     <p class="card-text">HTML, CSS, JavaScript, React.</p>
@@ -36,7 +36,7 @@
         
                 <div class="col-6">
                 <div class="card">
-                    <div class="card-body" style="background-color: #FAB338; height: 250px;"></div>
+                    <div class="card-body" style="background-color: #D2C6F0; height: 250px;"></div>
                     <div class="card-body">
                     <h6 class="card-title"><b>Project name</b></h6>
                     <p class="card-text">HTML, CSS, JavaScript, React.</p>
