--- a/templates/header.html
+++ b/templates/header.html
@@ -1,14 +1,21 @@
 <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-    </a>
+  <a
+    href="/"
+    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+  >
+    <svg class="bi me-2" width="40" height="32">
+      <use xlink:href="#bootstrap" />
+    </svg>
+  </a>
 
-    <ul class="nav nav-pills">
-      <li class="nav-item" style="color: red;"><a href="/" class="nav-link">HOME</a></li>
-      <li class="nav-item"><a href="/about" class="nav-link">ABOUT</a></li>
-      <li class="nav-item"><a href="/work" class="nav-link">WORK</a></li>
-      <li class="nav-item"><a href="/skills" class="nav-link">SKILLS</a></li>
-      <li class="nav-item"><a href="/resume" class="nav-link">RESUME</a></li>
-      <li class="nav-item"><a href="/contact" class="nav-link">CONTACT</a></li>
-    </ul>
+  <ul class="nav nav-pills">
+    <li class="nav-item" style="color: red">
+      <a href="/" class="nav-link">HOME</a>
+    </li>
+    <li class="nav-item"><a href="/about" class="nav-link">ABOUT</a></li>
+    <li class="nav-item"><a href="/work" class="nav-link">WORK</a></li>
+    <li class="nav-item"><a href="/skills" class="nav-link">SKILLS</a></li>
+    <li class="nav-item"><a href="/resume" class="nav-link">RESUME</a></li>
+    <li class="nav-item"><a href="/contact" class="nav-link">CONTACT</a></li>
+  </ul>
 </header>
