--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>About me</title>
     {% include 'bootstrap.html' %}
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <!-- ----------------------------------------------------------------------- -->
-        <!--                              About Me Section                           -->
-        <!-- ----------------------------------------------------------------------- -->
-        <div class="row section-style" id="about" style="height: 100vh;">
-            <div class="row" style="height: 10%;">
-                {% include 'header.html' %}
-            </div>
+      <!-- ----------------------------------------------------------------------- -->
+      <!--                              About Me Section                           -->
+      <!-- ----------------------------------------------------------------------- -->
 
-            <div class="row" style="height: 10%;">
-                <h5 class="mb-5 mt-4">ABOUT ME</h5>
-            </div>
+      <div class="row section-style" id="about" style="height: 100vh">
+        <div class="row" style="height: 10%">{% include 'header.html' %}</div>
 
-            <div class="row" style="height: 70%;">
-                <p class="about-me-content mt-5">I'm an aspiring full-stack developer and <b style="font-style: italic;">Computer Systems Engineer</b>. I'm passionate about tech and that's why I constantly seek to gain knowledge, improve and develop my skills as  programmer. I also enjoy to be in nature and learn Norwegian.</p>
-            </div>
-
-            <div class="d-flex align-self-center" style="height: 10%;">
-                <a class="social" target="_blank" href="https://github.com/fdippiton"><img src="/static/assets/github-icon.svg" alt=""></a>
-                <a class="social" target="_blank" href="https://www.linkedin.com/in/francina-dippiton/"><img src="/static/assets/linkedin-square-icon.svg" alt=""></a>
-                <a class="social" target="_blank" href="https://www.instagram.com/fdippiton/"><img src="/static/assets/black-instagram-icon.svg" alt=""></a>
-            </div>
-
+        <div class="row" style="height: 10%">
+          <!-- --------------------------- About Me Title ---------------------------- -->
+          <h5 class="mb-5 mt-4 fade-in-top">ABOUT ME</h5>
         </div>
+
+        <div class="row" style="height: 70%">
+          <p class="about-me-content mt-5 fade-in-top">
+            I'm an aspiring full-stack developer and
+            <b style="font-style: italic">Computer Systems Engineer</b>. I'm
+            passionate about tech and that's why I constantly seek to gain
+            knowledge, improve and develop my skills as programmer. I also enjoy
+            to be in nature and learn Norwegian.
+          </p>
+        </div>
+
+        <!-- ---------------------- Footer Social Media Links ---------------------- -->
+        <div class="d-flex align-self-center" style="height: 10%">
+          <a class="social" target="_blank" href="https://github.com/fdippiton"
+            ><img src="/static/assets/github-icon.svg" alt=""
+          /></a>
+          <a
+            class="social"
+            target="_blank"
+            href="https://www.linkedin.com/in/francina-dippiton/"
+            ><img src="/static/assets/linkedin-square-icon.svg" alt=""
+          /></a>
+          <a
+            class="social"
+            target="_blank"
+            href="https://www.instagram.com/fdippiton/"
+            ><img src="/static/assets/black-instagram-icon.svg" alt=""
+          /></a>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
