--- a/templates/resume.html
+++ b/templates/resume.html
@@ -5,6 +5,7 @@
     {% include 'bootstrap.html' %}
   </head>
   <body>
+    <!-- ------------------------------- Header -------------------------------- -->
     <div class="container">{% include 'header.html' %}</div>
   </body>
 </html>
