--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>About me</title>
+    <title>About me - Francina</title>
     {% include 'bootstrap.html' %}
   </head>
   <body>
