--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Francina Portfolio</title>
+    <title>Francina - Portfolio</title>
     {% include 'bootstrap.html' %}
   </head>
   <body>
@@ -19,8 +19,7 @@
             <h2 class="mt-5 fade-in-top">Hi!</h2>
             <br />
             <h2 class="fade-in-top">
-              I'm
-              <h2>Francina Dippitón!</h2>
+              <h2>I'm <span>Francina Dippitón!</span></h2>
             </h2>
             <br />
             <h2 class="fade-in-top">A Software Developer.</h2>
