--- a/templates/skills.html
+++ b/templates/skills.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Skills</title>
+    <title>Skills - Francina</title>
     {% include 'bootstrap.html' %}
   </head>
   <body>
