--- a/templates/work.html
+++ b/templates/work.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Work</title>
+    <title>Work - Francina</title>
     {% include 'bootstrap.html' %}
   </head>
   <body>
